# custom_python_packages

./: .gitignore  .gitignore.txt  README.md  index.html  pyproject.toml  setup.py
.github/workflows/: main.yaml
custom_package/: __init__.py
custom_package.egg-info/: PKG-INFO  top_level.txt
demo_plot/: functions.py
demo_plot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat
test_trial_ac.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
