[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "demo_plot"
version = "0.0.1"
authors = [
{ name="Anushree", email="anushree56.sxc@gmail.com" },
]
description = "A small example package just for testing"
readme = "README.md"
requires-python = ">=3.4"
dependencies = ['opencv-contrib-python','plotly>=5.0.0','numpy','pandas']
keywords = ['plot','test','ai','ml']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"